--- a/week-1/OOP/OOP Practice 2.ipynb
+++ b/week-1/OOP/OOP Practice 2.ipynb
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Dog: \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,14 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dog = Dog(\"ted\", 800)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -58,12 +68,14 @@
        "__main__.Dog"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "type(dog)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Dog: \n",
+    "    class_ = 'mammal'\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name  = name\n",
+    "        self.age   = age\n",
+    "        \n",
+    "    def __repr__\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +112,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ted is 100 and fran is 99'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ted = Dog('ted', 100)\n",
+    "fran = Dog('fran', 99)\n",
+    "\n",
+    "'{} is {} and {} is {}'.format(ted.name, ted.age, fran.name, fran.age)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,18 +165,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunk is a mammal!\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'mammal'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ted.class_"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,10 +194,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Dog: \n",
+    "    class_ = 'mammal'\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name  = name\n",
+    "        self.age   = age\n",
+    "        \n",
+    "    def speak(self, sound):\n",
+    "        return '{} says {}'.format(self.name, sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yahoo\n"
+     ]
+    }
+   ],
+   "source": [
+    "ted.speak('bark')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydog = Dog('ted',100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ted says yahoo'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mydog.speak('yahoo')"
+   ]
   },
   {
    "cell_type": "markdown",
