--- a/week-2/Data Visualization/Graph_types.ipynb
+++ b/week-2/Data Visualization/Graph_types.ipynb
@@ -819,13 +819,23 @@
     "\n",
     "1. Compare the average height of the football players with the average height of the basketball players.\n",
     "\n",
+    "bar chart\n",
+    "\n",
     "2. See if there is a relationship between the height and weight of the players.\n",
+    "\n",
+    "scatter\n",
     "\n",
     "3. Understand the distribution of the heights of both teams.  \n",
     "\n",
+    "histogram\n",
+    "\n",
     "4. Show if there are any outliers of extremely short or tall players. \n",
     "\n",
-    "5. Get a sense of how the basketball team has performed throughout the history of the program.  "
+    "boxplot\n",
+    "\n",
+    "5. Get a sense of how the basketball team has performed throughout the history of the program. \n",
+    "\n",
+    "line"
    ]
   }
  ],
