--- a/Week-3/webscraping/Webscraping.ipynb
+++ b/Week-3/webscraping/Webscraping.ipynb
@@ -270,9 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "page = requests.get(\"http://dataquestio.github.io/web-scraping-pages/simple.html\")\n",
@@ -288,9 +299,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "page.status_code\n"
    ]
@@ -304,9 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<!DOCTYPE html>\\n<html>\\n    <head>\\n        <title>A simple example page</title>\\n    </head>\\n    <body>\\n        <p>Here is some simple content for this page.</p>\\n    </body>\\n</html>'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "page.content"
    ]
@@ -322,9 +355,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "\n",
+       "<html>\n",
+       "<head>\n",
+       "<title>A simple example page</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<p>Here is some simple content for this page.</p>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "soup = BeautifulSoup(page.content, 'html.parser')\n",
@@ -333,9 +386,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      " <head>\n",
+      "  <title>\n",
+      "   A simple example page\n",
+      "  </title>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <p>\n",
+      "   Here is some simple content for this page.\n",
+      "  </p>\n",
+      " </body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
    "source": [
     "print(soup.prettify())\n"
    ]
@@ -349,9 +422,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['html', '\\n', <html>\n",
+       " <head>\n",
+       " <title>A simple example page</title>\n",
+       " </head>\n",
+       " <body>\n",
+       " <p>Here is some simple content for this page.</p>\n",
+       " </body>\n",
+       " </html>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(soup.children)\n"
    ]
@@ -365,9 +456,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[bs4.element.Doctype, bs4.element.NavigableString, bs4.element.Tag]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[type(item) for item in list(soup.children)]\n"
    ]
@@ -384,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,9 +504,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n', <head>\n",
+       " <title>A simple example page</title>\n",
+       " </head>, '\\n', <body>\n",
+       " <p>Here is some simple content for this page.</p>\n",
+       " </body>, '\\n']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(html.children)\n"
    ]
@@ -418,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,9 +568,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Here is some simple content for this page.'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p.get_text()\n"
    ]
@@ -469,9 +597,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p>Here is some simple content for this page.</p>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "soup = BeautifulSoup(page.content, 'html.parser')\n",
     "soup.find_all('p')"
@@ -486,9 +625,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Here is some simple content for this page.'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "soup.find_all('p')[0].get_text()\n"
    ]
@@ -502,9 +652,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<p>Here is some simple content for this page.</p>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "soup.find('p')\n"
    ]
@@ -549,9 +710,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<html>\n",
+       "<head>\n",
+       "<title>A simple example page</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<div>\n",
+       "<p class=\"inner-text first-item\" id=\"first\">\n",
+       "                First paragraph.\n",
+       "            </p>\n",
+       "<p class=\"inner-text\">\n",
+       "                Second paragraph.\n",
+       "            </p>\n",
+       "</div>\n",
+       "<p class=\"outer-text first-item\" id=\"second\">\n",
+       "<b>\n",
+       "                First outer paragraph.\n",
+       "            </b>\n",
+       "</p>\n",
+       "<p class=\"outer-text\">\n",
+       "<b>\n",
+       "                Second outer paragraph.\n",
+       "            </b>\n",
+       "</p>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "page = requests.get(\"http://dataquestio.github.io/web-scraping-pages/ids_and_classes.html\")\n",
     "soup = BeautifulSoup(page.content, 'html.parser')\n",
@@ -567,11 +763,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "                First outer paragraph.\n",
+      "            \n",
+      "\n",
+      "\n",
+      "\n",
+      "                Second outer paragraph.\n",
+      "            \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "soup.find_all('p', class_='outer-text')\n"
+    "paragraphs = soup.find_all('p', class_='outer-text')\n",
+    "for paragraph in paragraphs:\n",
+    "    print(paragraph.get_text())"
    ]
   },
   {
@@ -584,9 +799,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p class=\"outer-text first-item\" id=\"second\">\n",
+       " <b>\n",
+       "                 First outer paragraph.\n",
+       "             </b>\n",
+       " </p>, <p class=\"outer-text\">\n",
+       " <b>\n",
+       "                 Second outer paragraph.\n",
+       "             </b>\n",
+       " </p>]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "soup.find_all(class_=\"outer-text\")\n"
    ]
@@ -600,9 +834,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p class=\"inner-text first-item\" id=\"first\">\n",
+       "                 First paragraph.\n",
+       "             </p>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "soup.find_all(id=\"first\")\n"
    ]
@@ -633,11 +880,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p class=\"inner-text first-item\" id=\"first\">\n",
+       "                 First paragraph.\n",
+       "             </p>, <p class=\"inner-text\">\n",
+       "                 Second paragraph.\n",
+       "             </p>]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "soup.select(\"div p\")\n"
+    "soup.select(\"div p\")\n",
+    "\n"
    ]
   },
   {
@@ -683,21 +946,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "page = requests.get(\"http://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(page.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seven_day = soup.find(id=\"seven-day-forecast-container\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_items = seven_day.find_all(class_=\"tombstone-container\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Today\n",
+      "SunnyHigh: 69 °F\n"
+     ]
+    }
+   ],
+   "source": [
+    "tonight = forecast_items[0]\n",
+    "print(tonight.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TuesdayNight\n",
+      "ClearLow: 50 °F\n"
+     ]
+    }
+   ],
+   "source": [
+    "tonight = forecast_items[3]\n",
+    "print(tonight.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '____' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-954163a7d23c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m____\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m____\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"http://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m____\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'html.parser'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name '____' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "# 1\n",
-    "page = ____.____(\"http://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\")\n",
+    "page = soup.select(\"http://forecast.weather.gov/MapClick.php?lat=37.7772&lon=-122.4168\")\n",
     "\n",
     "#2\n",
     "soup = BeautifulSoup(page.____, 'html.parser')\n",
     "\n",
     "#3\n",
-    "seven_day = soup.find(____=\"_____\")\n",
+    "seven_day = soup.find(id=\"seven-day-forecast-container\")\n",
     "\n",
     "#4\n",
-    "forecast_items = seven_day.____(class_=\"_____\")\n",
+    "forecast_items = seven_day.find_all(class_=\"tombstone-container\")\n",
     "\n",
     "#5\n",
     "tonight = ____[_]\n",
@@ -750,13 +1101,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Today',\n",
+       " 'Tonight',\n",
+       " 'Tuesday',\n",
+       " 'TuesdayNight',\n",
+       " 'Wednesday',\n",
+       " 'WednesdayNight',\n",
+       " 'Thursday',\n",
+       " 'ThursdayNight',\n",
+       " 'Friday']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "period_tags = seven_day.select(\".tombstone-container .period-name\")\n",
     "periods = [pt.get_text() for pt in period_tags]\n",
     "periods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_temp_low_tags = seven_day.select('tombstone-container .temp_temp-low')\n",
+    "temps = [tl.get_text() for tl in temp_temp_low_tags]\n",
+    "temps"
    ]
   },
   {
