--- a/week-4/dsc-lp-PROBABILITY-permutations-combinations-conditional-partitioning-master/Probability-Permutations-Combinations-Conditional-Partitioning-Teacher-Version.ipynb
+++ b/week-4/dsc-lp-PROBABILITY-permutations-combinations-conditional-partitioning-master/Probability-Permutations-Combinations-Conditional-Partitioning-Teacher-Version.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -379,7 +379,7 @@
        "4                  white      black    False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,13 +404,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4155588380108321"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probability_bruised = df[df['bruised'] == True].shape[0]/df.shape[0]\n",
     "probability_bruised"
@@ -429,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -443,13 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33874938453963566"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probability_bruised_and_edible"
    ]
@@ -467,14 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8151658767772512"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob_edible_given_bruised = probability_bruised_and_edible/probability_bruised\n",
     "prob_edible_given_bruised"
@@ -482,13 +515,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "edible       0.815166\n",
+       "poisonous    0.184834\n",
+       "Name: edible-poisonous, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bruised = df[df['bruised'] == True]\n",
     "bruised['edible-poisonous'].value_counts(dropna=False, normalize=True)"
@@ -518,13 +564,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.517971442639094"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probability_edible = df[df['edible-poisonous'] == 'edible'].shape[0]/df.shape[0]\n",
     "probability_edible"
@@ -532,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -545,13 +602,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True     0.653992\n",
+       "False    0.346008\n",
+       "Name: bruised, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "edible = df[df['edible-poisonous'] == 'edible']\n",
     "edible['bruised'].value_counts(dropna=False, normalize=True)"
@@ -623,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -633,10 +703,10 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.023633677991137372"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,6 +716,37 @@
     "               | (df['stalk-color-above-ring'] == 'orange')\n",
     "              | (df['stalk-color-below-ring'] == 'orange')\n",
     "              ].shape[0]/df.shape[0]\n",
+    "# p_edible_and_orange = df[((df['gill-color'] == 'orange') \n",
+    "#                            | (df['stalk-color-above-ring'] == 'orange')\n",
+    "#                           | (df['stalk-color-below-ring'] == 'orange')\n",
+    "#                          )\n",
+    "#                          & (df['edible-poisonous']=='edible')\n",
+    "#                           ].shape[0]/df.shape[0]\n",
+    "# p_edible_given_orange = p_edible_and_orange / p_orange\n",
+    "# p_edible_given_orange\n",
+    "\n",
+    "p_orange\n",
+    "\n",
+    "#Apparently orange mushrooms seem fairly safe....(Disclaimer: don't take this as definitive foraging adivce!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "p_edible_and_orange = df[((df['gill-color'] == 'orange') \n",
     "                           | (df['stalk-color-above-ring'] == 'orange')\n",
     "                          | (df['stalk-color-below-ring'] == 'orange')\n",
@@ -653,9 +754,7 @@
     "                         & (df['edible-poisonous']=='edible')\n",
     "                          ].shape[0]/df.shape[0]\n",
     "p_edible_given_orange = p_edible_and_orange / p_orange\n",
-    "p_edible_given_orange\n",
-    "\n",
-    "#Apparently orange mushrooms seem fairly safe....(Disclaimer: don't take this as definitive foraging adivce!)"
+    "p_edible_given_orange"
    ]
   },
   {
