--- a/week-7/Bias_Variance_TradeOff/Revisiting_Linear_Models_PolyInterBiasVar.ipynb
+++ b/week-7/Bias_Variance_TradeOff/Revisiting_Linear_Models_PolyInterBiasVar.ipynb
@@ -257,6 +257,19 @@
     "\n",
     "<img src=\"attachment:Screen%20Shot%202019-03-11%20at%207.34.04%20AM.png\" style=\"width:500px;\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass in\n",
+    "split\n",
+    "string[::1]\n",
+    "\n",
+    "one word[:1]"
+   ]
   }
  ],
  "metadata": {
